[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "clawhermes-lark"
version = "0.1.0"
description = "ClawHermes 飞书/Lark 渠道适配器 — 基于 lark-oapi 官方 SDK"
requires-python = ">=3.12"
dependencies = [
    "lark-oapi>=1.6",
    "clawhermes",
]

[tool.setuptools.packages.find]
where = ["src"]
